--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 fastapi
-neo4j
-pyjwt
-pydantic
 uvicorn[standard]
+neo4j
+pydantic
 python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
+bcrypt==4.0.1  # Fixed bcrypt version to avoid compatibility issues
