--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   neo4j:
     image: neo4j:4.4
-    container_name: nodex_neo4j_v2  # Renamed container
+    container_name: nodex_neo4j_v3  # Renamed container
     ports:
       - "7474:7474"
       - "7687:7687"
@@ -15,7 +15,7 @@ services:
 
   backend:
     build: ./backend
-    container_name: nodex_backend_v2  # Renamed container
+    container_name: nodex_backend_v3  # Renamed container
     ports:
       - "0.0.0.0:8000:8000"
     volumes:
@@ -24,7 +24,7 @@ services:
     depends_on:
       - neo4j
     environment:
-      - NEO4J_URI=bolt://nodex_neo4j_v2:7687
+      - NEO4J_URI=bolt://nodex_neo4j_v3:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=yourStrongPassword
       - JWT_SECRET_KEY=tu_super_secreto_jwt
@@ -33,7 +33,7 @@ services:
 
   frontend:
     build: ./frontend
-    container_name: nodex_frontend_v2  # Renamed container
+    container_name: nodex_frontend_v3  # Renamed container
     ports:
       - "0.0.0.0:4545:3000"
     volumes:
@@ -43,6 +43,10 @@ services:
     tty: true
     depends_on:
       - backend
+    environment:
+      - WDS_SOCKET_HOST=0.0.0.0
+      - WDS_SOCKET_PORT=4545
+      - WDS_SOCKET_PATH=/ws
 
 volumes:
   neo4j_data:
