--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.29",
+    "@types/react-dom": "^18.2.0",
+    "classnames": "^2.3.1",
+    "lucide-react": "^0.303.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
+    "reactflow": "^11.10.1",
     "vis-network": "^9.0.0"
   },
   "browserslist": {
@@ -28,6 +34,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^19.1.6"
+    "@eslint/js": "^9.28.0",
+    "@types/react": "^18.2.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
+    "typescript": "^4.9.5"
   }
 }
