--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,14 @@
     "@types/react": "^18.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.2.0",
     "typescript": "^4.9.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   }
 }
