--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.21",
     "classnames": "^2.3.1",
+    "d3-force": "^3.0.0",
     "lucide-react": "^0.303.0",
     "postcss": "^8.5.4",
     "react": "^18.3.1",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/d3-force": "^3.0.10",
     "@types/react": "^18.2.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
