--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "classnames": "^2.3.1",
     "d3-force": "^3.0.0",
+    "dagre": "^0.8.5",
     "lucide-react": "^0.303.0",
     "postcss": "^8.5.4",
     "react": "^18.3.1",
