--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.2.0",
+    "tailwind-scrollbar": "^4.0.2",
     "typescript": "^4.9.5"
   },
   "eslintConfig": {
