--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
     "reactflow": "^11.10.1",
