--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.29",
     "@types/react-dom": "^18.2.0",
@@ -45,7 +46,7 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@types/d3-force": "^3.0.10",
-    "@types/react": "^18.2.0",
+    "@types/react": "^18.3.23",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
