--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,22 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.8",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.29",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.21",
-    "classnames": "^2.3.1",
+    "classnames": "^2.5.1",
     "d3-force": "^3.0.0",
     "dagre": "^0.8.5",
     "elkjs": "^0.10.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.303.0",
-    "postcss": "^8.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "react-scripts": "^5.0.1",
-    "reactflow": "^11.10.1",
-    "tailwindcss": "^4.1.8",
+    "reactflow": "^11.11.4",
     "vis-network": "^9.0.0"
   },
   "browserslist": {
@@ -47,11 +43,16 @@
     "@eslint/js": "^9.28.0",
     "@types/d3-force": "^3.0.10",
     "@types/react": "^18.3.23",
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.2.0",
+    "postcss": "^8.5.4",
+    "postcss-loader": "^8.1.1",
     "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.8",
     "typescript": "^4.9.5"
   },
   "eslintConfig": {
