Prueba 11 de menu

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   neo4j:
     image: neo4j:4.4
@@ -39,6 +37,7 @@ services:
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
+      - ./frontend/craco.config.js:/app/craco.config.js
     stdin_open: true
     tty: true
     depends_on:
