--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -3,28 +3,16 @@ nodaemon=true
 logfile=/var/log/supervisord.log
 loglevel=info
 
-[program:neo4j]
-command=/usr/share/neo4j/bin/neo4j console
-autostart=true
-autorestart=true
-stdout_logfile=/var/log/neo4j.out.log
-stderr_logfile=/var/log/neo4j.err.log
-environment=NEO4J_AUTH="neo4j/yourStrongPassword",NEO4J_ACCEPT_LICENSE_AGREEMENT="yes"
-directory=/usr/share/neo4j
-
 [program:backend]
-; Ajusta este comando al entrypoint real de tu backend.
-; Ej: usando Uvicorn para FastAPI o similar. Cambia "app.main:app"
 command=/app/backend/venv/bin/uvicorn app.main:app --host 0.0.0.0 --port 8000
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/backend.out.log
 stderr_logfile=/var/log/backend.err.log
 directory=/app/backend
-environment=NEO4J_URI="bolt://localhost:7687",NEO4J_USER="neo4j",NEO4J_PASSWORD="yourStrongPassword",JWT_SECRET_KEY="tu_super_secreto_jwt",ALGORITHM="HS256",ACCESS_TOKEN_EXPIRE_MINUTES="30"
+environment=REDIS_HOST="localhost",REDIS_PORT="6379",REDISGRAPH_GRAPH_NAME="sivg_graph",JWT_SECRET_KEY="tu_super_secreto_jwt",ALGORITHM="HS256",ACCESS_TOKEN_EXPIRE_MINUTES="30"
 
 [program:frontend]
-; Arranca React Dev Server en modo dev. Se expone en el puerto 4545
 command=npm start -- --host 0.0.0.0 --port 4545
 autostart=true
 autorestart=true
