Prueba 29 de menu

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -4,13 +4,13 @@ logfile=/var/log/supervisord.log
 loglevel=info
 
 [program:backend]
-command=/app/backend/venv/bin/uvicorn app.main:app --host 0.0.0.0 --port 8000
+command=uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/backend.out.log
 stderr_logfile=/var/log/backend.err.log
 directory=/app/backend
-environment=REDIS_HOST="localhost",REDIS_PORT="6379",REDISGRAPH_GRAPH_NAME="sivg_graph",JWT_SECRET_KEY="tu_super_secreto_jwt",ALGORITHM="HS256",ACCESS_TOKEN_EXPIRE_MINUTES="30"
+environment=PYTHONUNBUFFERED=1,REDIS_HOST="localhost",REDIS_PORT="6379",REDISGRAPH_GRAPH_NAME="sivg_graph",JWT_SECRET_KEY="tu_super_secreto_jwt",ALGORITHM="HS256",ACCESS_TOKEN_EXPIRE_MINUTES="30"
 
 [program:frontend]
 command=npm start -- --host 0.0.0.0 --port 4545
