--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -10,13 +10,12 @@ autorestart=true
 stdout_logfile=/var/log/backend.out.log
 stderr_logfile=/var/log/backend.err.log
 directory=/app/backend
-environment=PYTHONUNBUFFERED=1,REDIS_HOST="localhost",REDIS_PORT="6379",REDISGRAPH_GRAPH_NAME="sivg_graph",JWT_SECRET_KEY="tu_super_secreto_jwt",ALGORITHM="HS256",ACCESS_TOKEN_EXPIRE_MINUTES="30"
+environment=PYTHONUNBUFFERED=1,REDIS_HOST="my-redisgraph",REDIS_PORT="6379",REDISGRAPH_GRAPH_NAME="sivg_graph",JWT_SECRET_KEY="tu_super_secreto_jwt",ALGORITHM="HS256",ACCESS_TOKEN_EXPIRE_MINUTES="30"
 
 [program:frontend]
-command=npm start -- --host 0.0.0.0 --port 4545
+command=python3 -m http.server 4545 --directory /app/frontend/static
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/frontend.out.log
 stderr_logfile=/var/log/frontend.err.log
-directory=/app/frontend
-environment=WDS_SOCKET_HOST="0.0.0.0",WDS_SOCKET_PORT="4545",WDS_SOCKET_PATH="/ws"
+directory=/app/frontend/static
