--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -19,3 +19,6 @@ autorestart=true
 stdout_logfile=/var/log/frontend.out.log
 stderr_logfile=/var/log/frontend.err.log
 directory=/app/frontend/static
+
+# Frontend is now served by the backend through FastAPI static files
+# Removed the separate frontend server since it's not needed anymore
