--- a/.dockerignore
+++ b/.dockerignore
@@ -1,45 +1,34 @@
+# .dockerignore
+
 # Git
 .git
 .gitignore
 
+# Docker
+.dockerignore
+Dockerfile
+docker-compose.yml
+docker/
+
 # Node.js
-node_modules/
-npm-debug.log
+frontend/node_modules
+frontend/build
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/.env.local
 
 # Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
+backend/__pycache__
+backend/*.pyc
+backend/.venv
+backend/venv
+.pytest_cache
+.mypy_cache
 
-# IDE
-.vscode/
-.idea/
+# IDEs y OS
+.idea
+.vscode
 *.swp
-*.swo
-
-# Build files
-build/
-dist/
-*.egg-info/
-
-# Environment files
-.env
-.env.local
-
-# Logs
-logs/
-*.log
-
-# OS generated files
+*~
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
